[package]
name = "voidlogue"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.41.0", features = ["full"] }
adventurine = { path = "../adventurine"}